<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardDisplay">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="317dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/colorPrimary"
            android:text="@string/dashboard_symbol"
            android:textSize="24sp"
            app:fontFamily="sans-serif-condensed" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/colorAccent"
            android:text="@string/request_tutor"
            android:textSize="24sp"
            app:fontFamily="sans-serif-condensed" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="127dp"
            android:layout_height="50dp"
            android:text="CENTER"
            android:textSize="18sp"
            app:fontFamily="sans-serif-condensed" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="346dp"
            android:layout_height="66dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="389dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logoo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="69dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:text="@string/SLC_symbol"
            android:textSize="30sp"
            app:fontFamily="sans-serif-black" />

        <Button
            android:id="@+id/infobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/info_symbol"
            android:text="@string/info_symbol" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/log_out"
            android:text="@string/log_out" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>